Fix not visible search results

--- a/src/theme/DocPage/styles.module.css
+++ b/src/theme/DocPage/styles.module.css
@@ -87,3 +87,7 @@
   left: 10px;
   z-index: 100;
 }
+
+.hiddenSearchDiv {
+  display: none;
+}
